Changed heading styles so we are correctly using h1, h2, and h3 tags in a descendent fashion rather than jumping from h1 down to h3 because the style for h3 looked better.

--- a/css/styles.css
+++ b/css/styles.css
@@ -169,13 +169,17 @@ a.special-button:hover {color: #e3e3e3 !important;}
 /* Post styles */
 /* ----------------------------------------------------------*/
 
-.post-header { margin: 10px 0 30px; }
+/*.post-header { margin: 10px 0 30px; }*/
 
 .post-header h1 { 
     font-size: 26px; 
     font-weight: 300; 
     letter-spacing: -.5px; 
-    margin: 0;
+    margin: 20px 0 20px;
+    padding: 5px 0 5px;
+    text-indent: 20px;
+    border-top: 1px solid #e8e8e8;
+    border-bottom: 1px solid #e8e8e8;
 }
 
 .post-header .meta {
@@ -196,20 +200,21 @@ a.special-button:hover {color: #e3e3e3 !important;}
 }
 
 .post-content h2 {
-  font-size: 24px;
-  margin: 0;
+  font-size: 20px;
+  margin: 0 0 7px 0;
 }
 
 .post-content h3 {
-  font-size: 20px;
-  letter-spacing: -1px;
+  font-size: 18px;
+  letter-spacing: -.25px;
+  margin: 0;
 }
 
-.post-content h4 {
+/*.post-content h4 {
   font-size: 18px;
   letter-spacing: -1px;
 }
-
+*/
 div .note {
     padding: 15px 15px 15px 59px;
     background-color: rgba(0, 85, 129, 1);
